# llm-tutorial

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: pages.yml
codex/: .gitignore  README.md  model.py  train.py
data/our-model/: train.jsonl
data/qwen/: test.jsonl  train.jsonl  valid.jsonl
docs/: 01-pretrain.md  02-finetune.md  03-quantize.md  concepts.md  troubleshooting.md
opus/: model.py  train.py
scripts/: serve_course.py
site/: animations.js  app.js  course.js  highlight.js  index.html  styles.css
site/chapters/: 00-start.html  01-data.html  02-model.html  03-training.html  04-finetune.html  05-quantize.html  06-generate.html  07-code-map.html
src/macllm/: __init__.py  checkpoint.py  cli.py  config.py  dashboard.py  data.py  doctor.py  finetune.py  generation.py  model.py  quantization.py  training.py
tests/: test_config.py  test_dashboard.py  test_data.py  test_finetune.py  test_model.py
