[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-llm-lab"
version = "0.1.0"
description = "A visual, learn-by-building LLM course for Apple silicon"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "datasets>=4.0,<5",
  "huggingface-hub>=0.34,<2",
  "mlx>=0.30,<0.33",
  "mlx-lm[train]>=0.30,<0.32",
  "numpy>=2,<3",
  "tokenizers>=0.22,<0.23",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.12,<1"]

[project.scripts]
macllm = "macllm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
